<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_costum_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/background" >

        <ImageButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:id="@+id/previewBtn"
            android:background="@drawable/ic_baseline_keyboard_arrow_left_24"
            android:layout_margin="10dp"
            >
        </ImageButton>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/currentdate"
        android:allowUndo="true"
        android:id="@+id/current_Date"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_weight="3">

    </TextView>
        <ImageButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:id="@+id/nextBtn"
            android:background="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:layout_margin="10dp"
            >

        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_margin="10dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="HardcodedText" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>
     <GridView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/gridView"
         android:numColumns="7"
     android:background="@drawable/back"/>
    <ListView
        android:id="@+id/maliste"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>