<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="12sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:id="@+id/parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/eventdate"
                android:textStyle="bold"
                android:text="Date"
                android:layout_marginTop="10dp"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/eventname"
                android:textStyle="bold"
                android:text="Event"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:id="@+id/eventtime"
                android:textStyle="bold"
                android:text="Event"
                android:textSize="20sp"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/alarmbtn"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_notifications_off_24"
                android:background="@color/design_default_color_primary_dark"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/carte"
                android:text="@string/carte"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/delete"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/delete"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/background"
                    android:layout_margin="15dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/update"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/update"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/background"
                    android:layout_margin="15dp"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>